Fix problem with nav menus not updating correctly.  Fix google login.  Allow FB, Google, Twitter and local to login using the same email.  Disable the change password menu when login with FB, google, or twitter.  In admin screen, show provider and role.

--- a/yoMongoAuth/client/app/account/login/login.html
+++ b/yoMongoAuth/client/app/account/login/login.html
@@ -1,3 +1,5 @@
+<div ng-include="'components/navbar/navbar.html'"></div>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
@@ -36,19 +38,18 @@
             Login
           </button>
         </div>
-        <!--
-                <hr>
-                <div>
-                  <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-                    <i class="fa fa-facebook"></i> Connect with Facebook
-                  </a>
-                  <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
-                    <i class="fa fa-google-plus"></i> Connect with Google+
-                  </a>
-                  <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
-                    <i class="fa fa-twitter"></i> Connect with Twitter
-                  </a>
-                </div>-->
+        <hr>
+        <div>
+          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
+            <i class="fa fa-facebook"></i> Connect with Facebook
+          </a>
+          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
+            <i class="fa fa-google-plus"></i> Connect with Google+
+          </a>
+          <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
+            <i class="fa fa-twitter"></i> Connect with Twitter
+          </a>
+        </div>
 
       </form>
     </div>
