--- a/yoMongoAuth/client/app/admin/admin.html
+++ b/yoMongoAuth/client/app/admin/admin.html
@@ -5,7 +5,9 @@
   <ul class="list-group">
     <li class="list-group-item" ng-repeat="user in users">
         <strong>{{user.name}}</strong><br>
-        <span class="text-muted">{{user.email}}</span>
+        <span class="text-muted">{{user.email}}</span><br>
+      Provider: {{user.provider}}<br>
+      Role: {{user.role}}
         <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
     </li>
   </ul>
