--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     </a>
                     On the <a data-ng-href="{{mean.link}}">web</a>:<br><br>
                     <iframe width="100%" height="400px"
-                            src="http://scottnakada.github.io/UserAuth/yoMongoAuth/dist/public/index.html">
+                            src="https://yomongoauth.herokuapp.com/index.html">
                         <p>Your browser does not support iframes.</p>
                     </iframe>
                 </li>
