Remove the email input from the password change screen.

--- a/yoFireAuth/client/app/userAuth/changePass/changePass.html
+++ b/yoFireAuth/client/app/userAuth/changePass/changePass.html
@@ -1,15 +1,17 @@
 <div class="auth-forms title col-sm-6 col-sm-offset-3">
-    <h2>Change Password</h2>
+    <h2>Change Password for {{email}}</h2>
 
     <form ng-submit="changePassword(user)">
 
+        <!--
         <div class="input-group">
             <div class="input-group-addon">
                 <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
             </div>
-            <input type="email" ng-model="user.email" placeholder="Email" class="form-control" required>
+            <input type="text" ng-model="user.email" placeholder="Email" class="form-control" required>
         </div>
         <br>
+        -->
 
         <div class="input-group">
             <div class="input-group-addon">
